# WebsocketAsyncCoinBase

./: .gitignore  Dockerfile  README.md  config.py  pyproject.toml  settings.toml
coinbasewebsocket/: async_websocket.py  connect_coin_base.py  handle_prices.py  log_manager.py  prices_handler.py  subscribe.json
coinbasewebsocket.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_coinbasewebsocket.py  test_prices_handler.py  test_websocket.py
