[tool.poetry]
name = "CoinBaseWebSocket"
version = "0.1.0"
description = ""
authors = ["Jair Bitcoin <bravosinvest@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
websocket = "^0.2.1"
dash = {extras = ["complete"], version = "^1.19.0"}
dynaconf = "^3.1.4"
websockets = "^8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
