[tool.poetry]
name = "CoinBaseWebSocket"
version = "0.1.0"
description = "Project: Websocket with asyncio, working with CoinBase wss."
authors = ["Jair Bitcoin <bravosinvest@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
websocket = "^0.2.1"
dash = {extras = ["complete"], version = "^1.19.0"}
dynaconf = "^3.1.4"
websockets = "^8.1"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.31.0"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
